# openmusickit

./: .gitignore  00_core.ipynb  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  Makefile  README.md  index.ipynb  pyproject.toml  pytest.ini  settings.ini
docs/: _config.yml  core.html  index.html  sidebar.json
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
docs/source/: conf.py  index.rst
openmusickit/: _nbdev.py  tonal_algebra.py
src/openmusickit/: __init__.py
src/openmusickit/articulation/: articulation_vector.py
src/openmusickit/harmony/: tone_collection.py
src/openmusickit/note/: note.py
src/openmusickit/percussion/: gesture.py  gestures.py
src/openmusickit/systems/temporal/wsmn/: metrical_duration.py  time_signature.py
src/openmusickit/systems/tonal/wsmn/: chords.py  interval_quality.py  str_to_vec.py  symbols.py  tonal_arithmetic.py  tonal_vector.py  wsmn.py
src/openmusickit/time/: clock_time.py  duration.py  errors.py  symbols.py  time_signature.py
src/openmusickit/tone/: __init__.py  interval.py  silent_tone.py  tone.py
src/openmusickit/tones/: __init__.py  constants.py  interval_quality.py  tonal_arithmetic.py  tonal_vector.py
src/openmusickit/utils/: meta.py  number_names.py  numbers.py
tests/rhythm/: test_metered_duration.py
tests/tones/: test_fixtures.py  test_tonal_arithmetic.py
